# Modern-CMake-Workflow

./: .gitignore  CMakeLists.txt  README.MD  conanfile.txt
src/: CMakeLists.txt  main.cpp  version.h
src/system/: CMakeLists.txt  Logger.cpp
src/system/include/pn/system/: Logger.h
test/: CMakeLists.txt  Test.cpp
test/pn/system/: LoggerTest.h
